--- a/app/sass/partner-cabinet.sass
+++ b/app/sass/partner-cabinet.sass
@@ -24,7 +24,7 @@
             flex-flow: column nowrap
         @include mobileL
             padding: 20px
-        
+
     &__left-nav
         display: flex
         flex-flow: column nowrap
@@ -38,10 +38,10 @@
         @include tabletL
             max-width: 100%
             margin: 0 0 25px 0
-    
+
     &__right-nav
         width: 100%
-    
+
     &__info-wrapper
         display: flex
         flex-flow: row nowrap
@@ -50,7 +50,7 @@
         margin: 0 0 23px 0
         @include mobile
             margin: 0 0 15px 0
-    
+
     &__id-info
         color: #8AE245
         display: flex
@@ -61,7 +61,7 @@
         span
             font-family: "Kharkiv Tone"
 
-        .id-number 
+        .id-number
             margin-left: 20px
             color: $white
             text-transform: uppercase
@@ -71,7 +71,7 @@
                 overflow: hidden
                 text-overflow: ellipsis
                 width: 150px
-    
+
     &__settings-button
         display: flex
         padding: 0
@@ -99,7 +99,7 @@
             width: 100%
             justify-content: space-between
             margin: 0 0 15px 0
-    
+
     &__balance-inner
         display: flex
         flex-flow: row nowrap
@@ -150,15 +150,14 @@
             padding: 20px
 
         .intro
-            &__item 
+            &__item
                 @include tablet
-                    padding-bottom: 20px 
+                    padding-bottom: 20px
                     margin-bottom: 20px
                     border-bottom: 1px solid rgba(255, 255, 255, .2)
                 @include mobileL
-                    padding-bottom: 25px 
+                    padding-bottom: 25px
                     margin-bottom: 20px
-
 
             &__list
                 height: auto
@@ -204,7 +203,7 @@
                         fill: white
                         opacity: 0.1
                         transition: .3s ease all
-                
+
                 &.active
                     svg
                         path
@@ -220,7 +219,6 @@
                     justify-content: space-between
                     &:first-child
                         margin-bottom: 20px
-                    
 
     &__service-wrapper
         width: 100%
@@ -253,6 +251,9 @@
             height: 40vh
         @media (max-width: 1441px) and (max-height: 815px)
             height: 400px
+        &--pw
+            background: rgba(0, 0, 0, 0.4)
+            backdrop-filter: blur(25px)
 
     &__table-item
         width: 13%
@@ -261,7 +262,7 @@
         flex-flow: row nowrap
         &:nth-child(3), &:nth-child(4)
             width: 24%
-        
+
         &.title
             font-size: 13px
             font-family: 'Kharkiv Tone'
@@ -274,11 +275,11 @@
             font-size: 16px
             line-height: 20px
             color: $white
-    
+
     &__table-logo
         margin-right: 10px
-        
-    &__nav-button 
+
+    &__nav-button
         border: none
         outline: none
         cursor: pointer
@@ -302,7 +303,7 @@
         margin-bottom: 10px
         background: rgba(255,255,255,0.1)
 
-    &__table-status 
+    &__table-status
         flex-shrink: 0
         width: 10px
         height: 10px
