--- a/app/sass/partners-worker-cabinet.sass
+++ b/app/sass/partners-worker-cabinet.sass
@@ -42,6 +42,7 @@
         background: linear-gradient(180deg, #84F0FF 0%, #00E0FF 100%)
         box-shadow: 0px 5px 10px rgba(0, 224, 255, 0.25)
         color: #090909
+        text-shadow: 0px 1px 2px rgba(0, 194, 255, 0.7)
 
 .partners-worker-cabinet__button-controler
     display: flex
@@ -125,3 +126,115 @@
 .partners-worker-cabinet__bottom-part
     padding-bottom: 20px
     border-bottom: 1px solid rgba(255, 255, 255, 0.1)
+
+.partners-worker-cabinet__service-top-container
+    display: flex
+    align-items: flex-end
+
+.partners-worker-cabinet__showing
+    font-family: 'Poppins'
+    font-style: normal
+    font-weight: 300
+    font-size: 14px
+    line-height: 20px
+    color: #FFFFFF
+    margin-right: 40px
+
+.partners-worker-cabinet__showing-count
+    font-weight: 500
+    font-size: 16px
+    line-height: 20px
+
+.partners-worker-cabinet__filters-list
+    display: flex
+    gap: 5px
+    margin-right: 15px
+
+.partners-worker-cabinet__filters-item
+    padding: 10px
+    width: fit-content
+    font-family: 'Poppins'
+    font-style: normal
+    font-weight: 300
+    font-size: 14px
+    line-height: 20px
+    color: #FFFFFF
+    background: rgba(255, 255, 255, 0.1)
+    backdrop-filter: blur(25px)
+    border-radius: 20px
+    cursor: pointer
+    &--active
+        background: #00E0FF
+        color: #090909
+
+.partners-worker-cabinet__searching-form
+    position: relative
+    &::before
+        @include defaul-pseudo-element(2px, 22px)
+        @include centering-height-absolute-element()
+        background: #00E0FF
+        left: 33px
+    &::after
+        content: "A"
+        position: absolute
+        font-family: 'Neue Machina'
+        font-style: normal
+        font-weight: 500
+        font-size: 18px
+        line-height: 18px
+
+        color: #FFFFFF
+        @include centering-height-absolute-element()
+        top: 57%
+        left: 10px
+
+.partners-worker-cabinet__searching-input
+    background: rgba(255, 255, 255, 0.1)
+    border: 1px solid #00E0FF
+    border-radius: 10px
+    font-family: 'Neue Machina'
+    font-style: normal
+    font-weight: 500
+    font-size: 18px
+    line-height: 28px
+    position: relative
+
+    color: #FFFFFF
+    padding: 13px 80px 6px 37px
+    box-sizing: border-box
+
+.partners-worker-cabinet__searching-submit
+    position: absolute
+    @include centering-height-absolute-element()
+    right: 3px
+
+.partner-cabinet__service-table-header
+    &--pw
+        margin-bottom: 0
+        padding-left: 6px
+        padding-right: 16px
+
+.partner-cabinet__table-item
+    flex-grow: 1
+    width: fit-content !important
+    &.title
+        display: flex
+        justify-content: center
+
+.partner-cabinet__table-item__checkbox-input
+    display: none
+    &:checked + .partner-cabinet__table-item__checkbox-label
+        background: url(../img/checkedCheckbox.svg) no-repeat center center !important
+        background-size: cover !important
+        border: none
+
+.partner-cabinet__table-item__checkbox-label
+    position: relative
+    width: 19px
+    height: 19px
+    box-sizing: border-box
+    border: 3px solid #00E0FF
+    cursor: pointer
+    &--title
+        width: 25px
+        height: 25px
