Добавляет адаптивность, центровку таблицы и основу меню

--- a/app/sass/_global.sass
+++ b/app/sass/_global.sass
@@ -55,6 +55,11 @@ section
     & .partner-cabinet__service-item
       margin-bottom: 0
       background: transparent
+      padding-left: 6px
+      padding-right: 16px
+      display: grid
+      grid-template-columns: 2% 2.7% 2.7% 2.7% 3.68% 5.52% 12.7% 6.5% 12.7% 3.3% 3.3% 5.26% 5.26% 8.29% 4.27% 1.84%
+      gap: 15px
       &:nth-of-type(2n)
         background: rgba(255, 255, 255, 0.07)
       .sim
