--- a/app/sass/partners-worker-cabinet.sass
+++ b/app/sass/partners-worker-cabinet.sass
@@ -9,12 +9,23 @@
     .partners-worker-cabinet__left-controler
         display: flex
         gap: 20px
+        @media (max-width: 681px)
+            min-width: 100%
 
 .partners-worker-cabinet__top-part
     display: flex
     justify-content: space-between
+    @media (max-width: 681px)
+        flex-wrap: wrap
+        gap: 15px 0
+
+.partners-worker-cabinet__right-controler
+    @media (max-width: 681px)
+        min-width: 100%
+    & .partners-worker-cabinet__button-controler
 
 .partners-worker-cabinet__button-controler
+
     &--power
         box-shadow: 0px 10px 20px rgba(254, 24, 107, 0.25)
         background: linear-gradient(180deg, #FF5290 0%, #FE186B 100%)
@@ -33,16 +44,24 @@
     &--delete
         background: linear-gradient(180deg, #FF5290 0%, #FE186B 100%)
         box-shadow: 0px 10px 20px rgba(254, 24, 107, 0.25)
+        @media (max-width: 681px)
+            flex-grow: 1
 
     &--reset
         background: linear-gradient(180deg, #FF5290 0%, #FE186B 100%)
         box-shadow: 0px 10px 20px rgba(254, 24, 107, 0.25)
+        @media (max-width: 681px)
+            flex-grow: 1
 
     &--download
         background: linear-gradient(180deg, #84F0FF 0%, #00E0FF 100%)
         box-shadow: 0px 5px 10px rgba(0, 224, 255, 0.25)
         color: #090909
         text-shadow: 0px 1px 2px rgba(0, 194, 255, 0.7)
+        @media (max-width: 681px)
+            flex-grow: 1
+            padding-top: 15px
+            padding-bottom: 15px
 
 .partners-worker-cabinet__button-controler
     display: flex
@@ -68,6 +87,11 @@
     display: grid
     grid-template-columns: repeat(6, 1fr)
     gap: 10px
+
+    @media (max-width: 967px)
+        grid-template-columns: repeat(3, 1fr)
+    @media (max-width: 508px)
+        grid-template-columns: repeat(2, 1fr)
 
 .partners-worker-cabinet__statistic-item
     padding: 15px 15px 10px 25px
@@ -131,6 +155,10 @@
     display: flex
     align-items: flex-end
 
+    @media (max-width: 943px)
+        flex-wrap: wrap
+        gap: 20px 0
+
 .partners-worker-cabinet__showing
     font-family: 'Poppins'
     font-style: normal
@@ -149,6 +177,8 @@
     display: flex
     gap: 5px
     margin-right: 15px
+    @media (max-width: 943px)
+        flex-grow: 1
 
 .partners-worker-cabinet__filters-item
     padding: 10px
@@ -163,9 +193,12 @@
     backdrop-filter: blur(25px)
     border-radius: 20px
     cursor: pointer
+    text-align: center
     &--active
         background: #00E0FF
         color: #090909
+    @media (max-width: 943px)
+        flex-grow: 1
 
 .partners-worker-cabinet__searching-form
     position: relative
@@ -213,6 +246,11 @@
         margin-bottom: 0
         padding-left: 6px
         padding-right: 16px
+        display: grid
+        grid-template-columns: 2% 2.7% 2.7% 2.7% 3.68% 5.52% 12.7% 6.5% 12.7% 3.3% 3.3% 5.26% 5.26% 8.29% 4.27% 1.84%
+        gap: 15px
+        min-width: 1378px
+        box-sizing: border-box
 
 .partner-cabinet__table-item
     flex-grow: 1
@@ -238,3 +276,22 @@
     &--title
         width: 25px
         height: 25px
+
+.partners-worker-cabinet__service-table
+    & .partner-cabinet__table-item
+        justify-self: center
+
+.partners-worker-cabinet__service-table
+    overflow-x: scroll
+    & .partner-cabinet__service-table-body
+        overflow: visible
+        overflow-y: scroll
+        min-width: 1378px
+        box-sizing: border-box
+
+.partners-worker-cabinet__service-top-container__mobile-wrapper
+    display: flex
+    align-items: flex-end
+
+    @media (max-width: 943px)
+        min-width: 100%
