Добавляет боковое меню

--- a/app/sass/_global.sass
+++ b/app/sass/_global.sass
@@ -33,6 +33,7 @@ section
     position: relative
     background-image: url('../img/partners-worker.jpg')
     background-size: cover
+    color: #ffffff
 
     &::before
       @include defaul-pseudo-element(100%)
