--- a/app/sass/main-content.sass
+++ b/app/sass/main-content.sass
@@ -3,7 +3,7 @@
     flex-wrap: nowrap
     max-width: 100vw
     &--left
-        width: 16.27vw
-        min-width: 226px
+        min-width: 319px
+        max-width: 319px
     &--right
         max-width: 83.73vw
