--- a/app/sass/partners-worker-cabinet.sass
+++ b/app/sass/partners-worker-cabinet.sass
@@ -283,6 +283,12 @@
 
 .partners-worker-cabinet__service-table
     overflow-x: scroll
+    &::-webkit-scrollbar
+        height: 8px
+        background-color: #f9f9fd
+    &::-webkit-scrollbar-thumb
+        background-color: #223c50
+
     & .partner-cabinet__service-table-body
         overflow: visible
         overflow-y: scroll
