--- a/app/sass/main-content.sass
+++ b/app/sass/main-content.sass
@@ -2,8 +2,13 @@
     display: flex
     flex-wrap: nowrap
     max-width: 100vw
+    overflow: hidden
     &--left
         min-width: 319px
         max-width: 319px
     &--right
-        max-width: 83.73vw
+        transition: 0.5s
+        flex-grow: 1
+        max-width: 100%
+        @media (max-width: 1700px)
+            padding-left: 20px
