--- a/app/sass/side-menu.sass
+++ b/app/sass/side-menu.sass
@@ -4,12 +4,34 @@
     box-sizing: border-box
     transition: 0.5s
     left: 0
+    @media (max-width: 1700px)
+        position: absolute
+        left: 0
+        top: 0
+        z-index: 20
+        background: #090909
+        height: 100%
+        & + .main-content__wrapper--right .header-partner
+            z-index: 19
+            position: relative
+    @media (max-width: 1000px)
+        padding: 14px 20px
+        min-width: 270px
+    @media (max-width: 900px)
+        min-width: 240px
+        padding: 14px 15px
+        & .side-menu__link
+            font-size: 16px
+            line-height: 30px
+        & .side-menu__item
+            padding-left: 35px
     &::before
         @include defaul-pseudo-element(1px, 80%)
         right: 0
         background: #FFFFFF
         opacity: 0.1
         top: 10%
+        transition: 0.5s
 
     &--closed
         left: -300px
@@ -21,10 +43,37 @@
         min-height: 100%
         &::before
             right: -290px
+            transition: 0.5s
         & .side-menu__button
             right: -300px
+            transition: 0.5s
         & + .main-content__wrapper--right
-            max-width: none
+            transition: 0.5s
+        @media (max-width: 1700px)
+            min-width: 319px
+            position: absolute
+            left: -280px
+            &::before
+                right: 0px
+                transition: 0.5s
+            & .side-menu__button
+                right: -10px
+                transition: 0.5s
+        @media (max-width: 1000px)
+            left: -300px
+            &::before
+                right: -10px
+                transition: 0.5s
+            & .side-menu__button
+                right: -20px
+                transition: 0.5s
+        @media (max-width: 700px)
+            &::before
+                right: 0px
+                transition: 0.5s
+            & .side-menu__button
+                right: -10px
+                transition: 0.5s
 
 .side-menu__button
     position: absolute
@@ -37,6 +86,7 @@
     background: url(../img/side-menu-button.svg) no-repeat center center
     background-size: cover
     cursor: pointer
+    border: none
     transition: 0.5s
     &--active
         transition: 0.5s
@@ -80,7 +130,6 @@
         background-image: url("../img/sell_FILL1_wght700_GRAD200_opsz48 1.svg")
     &--support::before
         background-image: url("../img/contact_support_FILL1_wght700_GRAD200_opsz48 1.svg")
-
 
 .side-menu__item-more
     right: 0
