--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -11,3 +11,5 @@
 @import "./footer.sass"
 @import "./main-content.sass"
 @import "./side-menu.sass"
+@import "./more-info.sass"
+@import "./under-menu.sass"
