--- a/app/sass/header-partner.sass
+++ b/app/sass/header-partner.sass
@@ -244,17 +244,17 @@
 			svg
 				margin-right: 10px
 	&__list
-		margin-top: 50px
-		li
-			&:not(:last-child)
-				margin-bottom: 40px
+		padding: 30px 0
+		display: flex
+		flex-direction: column
+		gap: 20px
 		a
 			color: $white
 			&:hover, &.active
 				color: $blue
 			@include p1
 	&__bottom
-		padding: 37px 0 0 0
+		padding: 30px 0 0 0
 		position: absolute
 		left: 0
 		bottom: 0
