--- a/app/sass/header.sass
+++ b/app/sass/header.sass
@@ -160,7 +160,6 @@
       svg
         transform: rotate(180deg)
 
-
 .menu
   display: block
   width: 100%
@@ -190,7 +189,7 @@
     height: 100%
 
   &__account
-    padding: 30px 0
+    padding: 20px 0
     border-top: 1px solid rgba(255,255,255,.1)
     border-bottom: 1px solid rgba(255,255,255,.1)
     a
@@ -202,10 +201,10 @@
       svg
         margin-right: 10px
   &__list
-    margin-top: 50px
-    li
-      &:not(:last-child)
-        margin-bottom: 40px
+    padding: 30px 0
+    display: flex
+    flex-direction: column
+    gap: 20px
     a
       color: $white
       &:hover, &.active
