--- a/app/sass/side-menu.sass
+++ b/app/sass/side-menu.sass
@@ -13,17 +13,8 @@
         height: 100%
         & + .main-content__wrapper--right .header-partner
             position: relative
-    @media (max-width: 1000px)
-        padding: 14px 20px
-        min-width: 270px
-    @media (max-width: 900px)
-        min-width: 240px
-        padding: 14px 15px
-        & .side-menu__link
-            font-size: 16px
-            line-height: 30px
-        & .side-menu__item
-            padding-left: 35px
+    @include tablet
+        display: none
     &::before
         @include defaul-pseudo-element(1px, 80%)
         right: 0
