--- a/app/sass/_global.sass
+++ b/app/sass/_global.sass
@@ -49,6 +49,7 @@ section
       -webkit-backdrop-filter: none
       backdrop-filter: none
       border-radius: 0
+      height: auto !important
     & .partner-cabinet__service-wrapper
       display: flex
       flex-direction: column
