--- a/app/sass/header-partner.sass
+++ b/app/sass/header-partner.sass
@@ -1,6 +1,5 @@
 .header-partner
-	position: sticky
-	left: 0
+	position: fixed !important
 	top: 0
 	z-index: 999
 	padding: 20px 40px 30px
@@ -12,24 +11,30 @@
 	mix-blend-mode: normal
 	transition: .5s
 	background: none
+	transition: 0.5s
 	@include laptop
 		padding-left: 30px
 	@include tablet
 		padding: 15px 30px
 	&.hide
-		transform: translateY(-100%)
-		@include tablet
-			transform: translateY(0px)
+		background: rgba(0, 0, 0, 0.6)
+		transition: 0.5s
 	&__logo
 		font-weight: 900
 		font-family: "Neue Machina"
 		font-size: 20px
 		color: $white
 	&--pw
-		width: 95%
-		margin: 0 auto
-		padding-right: 0
-		padding-left: 0
+		width: 100%
+		&__inner-wrapper
+			width: 95%
+			margin: 0 auto
+			padding-right: 0
+			padding-left: 0
+			display: flex
+			flex-flow: wrap
+			align-items: center
+			justify-content: space-between
 	.header__logo
 		&--pw
 			font-family: 'Neue Machina'
@@ -206,10 +211,12 @@
 .menu
 	display: block
 	width: 100%
-	height: 100%
+	height: 100vh
 	position: fixed
+	overflow-y: auto
+	pointer-events: none
 	left: 0
-	top: 0
+	bottom: 0
 	z-index: 998
 	padding: 84px 20px 30px 30px
 	opacity: 0
@@ -218,6 +225,8 @@
 	&.open
 		opacity: 1
 		visibility: visible
+		pointer-events: auto
+		background-color: rgb(9,9, 9)
 	.rgba
 		width: 100%
 		height: 100%
@@ -229,7 +238,7 @@
 	&__content
 		position: relative
 		z-index: 3
-		height: 100%
+		height: 100vh
 
 	&__account
 		padding: 30px 0
