--- a/app/sass/main-content.sass
+++ b/app/sass/main-content.sass
@@ -7,6 +7,7 @@
         min-width: 319px
         max-width: 319px
     &--right
+        padding-top: 87px
         transition: 0.5s
         flex-grow: 1
         max-width: 100%
