--- a/app/sass/main-content.sass
+++ b/app/sass/main-content.sass
@@ -3,13 +3,7 @@
     flex-wrap: nowrap
     max-width: 100vw
     overflow: hidden
-    &--left
-        min-width: 319px
-        max-width: 319px
     &--right
-        padding-top: 87px
         transition: 0.5s
         flex-grow: 1
-        max-width: 100%
-        @media (max-width: 1700px)
-            padding-left: 20px
+        width: calc( 100% - 319px )
