--- a/app/sass/partner-cabinet.sass
+++ b/app/sass/partner-cabinet.sass
@@ -242,18 +242,13 @@
         backdrop-filter: blur(25px)
 
     &__service-table-body
-        height: 60vh
+        height: auto
         overflow-y: auto
-        padding-bottom: 50px
         &::-webkit-scrollbar
             display: none
-        @include laptop1290
-            height: 40vh
-        @media (max-width: 1441px) and (max-height: 815px)
-            height: 400px
         &--pw
             background: rgba(0, 0, 0, 0.4)
-            backdrop-filter: blur(25px)
+            backdrop-filter: blur(25px)np
 
     &__table-item
         width: 13%
