--- a/app/sass/_global.sass
+++ b/app/sass/_global.sass
@@ -66,6 +66,7 @@ section
         grid-template-columns: 2% 2.7% 2.7% 2.7% 3.68% 5.52% 12.7% 6.5% 12.7% 3.3% 3.3% 5.26% 5.26% 8.29% 4.27% 1.84%
         gap: 15px
         width: 100%
+        align-items: center
       &:nth-of-type(2n)
         background: rgba(255, 255, 255, 0.07)
       .sim
@@ -184,6 +185,9 @@ section
     text-align: center
     color: #FFFFFF
     text-shadow: 0px 1px 2px rgba(196, 7, 75, 0.7)
+    @media (max-width: 506px)
+      width: 100%
+      padding: 15px
 
   &--blue
     background: linear-gradient(180deg, #84F0FF 0%, #00E0FF 100%)
