Вносит правки по скролу таблицы и по боковому меню

--- a/app/sass/header-partner.sass
+++ b/app/sass/header-partner.sass
@@ -24,7 +24,7 @@
 		font-size: 20px
 		color: $white
 	&--pw
-		width: 95%
+		width: 97%
 		margin: 0 auto
 		padding-right: 0
 		padding-left: 0
@@ -32,6 +32,9 @@
 		flex-flow: wrap
 		align-items: center
 		justify-content: space-between
+		@media(max-width: 800px)
+			width: 95%
+
 	.header__logo
 		&--pw
 			font-family: 'Neue Machina'
