--- a/app/sass/_global.sass
+++ b/app/sass/_global.sass
@@ -67,6 +67,10 @@ section
         gap: 15px
         width: 100%
         align-items: center
+        @media (max-width: 1430px)
+            gap: 13px
+        @media (max-width: 1275px)
+            gap: 12px  
       &:nth-of-type(2n)
         background: rgba(255, 255, 255, 0.07)
       .sim
