--- a/app/sass/partner-cabinet.sass
+++ b/app/sass/partner-cabinet.sass
@@ -1,6 +1,6 @@
 .partner-cabinet
     &__wrapper
-        width: 95%
+        width: 97%
         margin: 0 auto
         background: rgba(0, 0, 0, 0.4)
         backdrop-filter: blur(25px)
@@ -14,6 +14,8 @@
             height: 90vh
         @media (min-height: 890px)
             height: 90vh
+        @media(max-width: 800px)
+            width: 95%
 
     &__nav-wrapper
         display: flex
@@ -222,7 +224,7 @@
 
     &__service-wrapper
         width: 100%
-        overflow-x: auto
+        overflow-x: hidden
         overflow-y: hidden
         &::-webkit-scrollbar
             display: none
