Вносит правки по боковому меню

--- a/app/sass/partners-worker-cabinet.sass
+++ b/app/sass/partners-worker-cabinet.sass
@@ -266,7 +266,7 @@
         margin-bottom: 0
         padding-left: 6px
         padding-right: 16px
-        display: grid
+        display: grid //3.08% 3.78% 3.78% 3.78% 4.76% 6.6% 13.78% 7.58% 13.78% 4.38% 4.38% 6.34% 6.34% 9.37% 5.35% 2.92%
         grid-template-columns: 2% 2.7% 2.7% 2.7% 3.68% 5.52% 12.7% 6.5% 12.7% 3.3% 3.3% 5.26% 5.26% 8.29% 4.27% 1.84%
         gap: 15px
         width: 100%
@@ -274,10 +274,9 @@
         @media (max-width: 1430px)
             gap: 13px
         @media (max-width: 1275px)
-            gap: 12px 
+            gap: 12px
         @media (max-width: 1000px)
             min-width: 1378px
-        
 
 .partner-cabinet__table-item
     flex-grow: 1
@@ -346,7 +345,6 @@
             overflow-x: hidden
         @media (max-width: 1000px)
             min-width: 1378px
-        
 
 .partners-worker-cabinet__service-top-container__mobile-wrapper
     display: flex
