--- a/app/sass/activation-steps.sass
+++ b/app/sass/activation-steps.sass
@@ -25,77 +25,135 @@
         padding-left: 10.5vw
     @media (max-width: 570px)
         padding-left: 8.5vw
+    @media (max-width: 470px)
+        padding: 120px 30px 120px
+        background: linear-gradient(180deg, rgba(0, 87, 168, 0.1) 0%, rgba(0, 0, 0, 0) 100%), #090909
 
 .activation-steps__info
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0) -6.3%, rgba(0, 127, 146, 0.2) 105.22%), rgba(9, 9, 9, 0.05)
-    backdrop-filter: blur(7.5px)
-    border-radius: 50%
-    display: flex
-    align-items: center
-    text-align: center
-    justify-content: center
-    flex-direction: column
-    width: 492px
-    height: 492px
-    gap: 35px
-    position: relative
-    &::before
-        @include defaul-pseudo-element(341px, 594px)
-        background: url(../img/activation-border.svg) no-repeat center center
-        background-size: contain
-        right: -95px
-    @media (max-width: 1470px)
-        width: 422px
-        height: 422px
-        &::before
-            width: 292px
-            height: 509px
-            right: -80px
-    @media (max-width: 1175px)
-        width: 380px
-        height: 380px
-        &::before
-            width: 262px
-            height: 458px
-            right: -70px
-    @media (max-width: 1070px)
-        width: 342px
-        height: 342px
-        &::before
-            width: 235px
-            height: 412px
-            right: -63px
-    @media (max-width: 880px)
-        width: 310px
-        height: 310px
-        gap: 30px
-        &::before
-            width: 211.5px
-            height: 370px
-            right: -56.7px
-    @media (max-width: 790px)
-        width: 260px
-        height: 260px
-        gap: 25px
-        &::before
-            width: 180px
-            height: 315px
-            right: -48px
-    @media (max-width: 675px)
-        width: 208px
-        height: 208px
-        gap: 20px
-        &::before
-            width: 144px
-            height: 252px
-            right: -38px
-    @media (max-width: 570px)
-        width: 185px
-        height: 185px
-        &::before
-            width: 130px
-            height: 225px
-            right: -34px
+    @media (min-width: 470px)
+        border-radius: 50%
+        width: 492px
+        height: 492px
+        position: relative
+        display: flex
+        align-items: center
+        text-align: center
+        justify-content: center
+        flex-direction: column
+        gap: 35px
+        position: relative
+        &::after
+            @include defaul-pseudo-element(100%)
+            @include centering-absolute-element()
+            background: linear-gradient(90deg, rgba(0, 0, 0, 0) -6.3%, rgba(0, 127, 146, 0.2) 105.22%), rgba(9, 9, 9, 0.05)
+            backdrop-filter: blur(7.5px)
+            border-radius: 50%
+            z-index: 0
+        & .activation-steps__decor-border
+            position: absolute
+            background-size: contain
+            right: -95px
+            top: -10%
+
+        @media (max-width: 1470px)
+            width: 422px
+            height: 422px
+            & .activation-steps__decor-border
+                width: 292px
+                height: 509px
+                right: -80px
+        @media (max-width: 1175px)
+            width: 380px
+            height: 380px
+            & .activation-steps__decor-border
+                width: 262px
+                height: 458px
+                right: -70px
+        @media (max-width: 1070px)
+            width: 342px
+            height: 342px
+            & .activation-steps__decor-border
+                width: 235px
+                height: 412px
+                right: -63px
+        @media (max-width: 880px)
+            width: 310px
+            height: 310px
+            gap: 30px
+            & .activation-steps__decor-border
+                width: 211.5px
+                height: 370px
+                right: -56.7px
+        @media (max-width: 790px)
+            width: 260px
+            height: 260px
+            gap: 25px
+            & .activation-steps__decor-border
+                width: 180px
+                height: 315px
+                right: -48px
+        @media (max-width: 675px)
+            width: 208px
+            height: 208px
+            gap: 20px
+            & .activation-steps__decor-border
+                width: 144px
+                height: 252px
+                right: -38px
+        @media (max-width: 570px)
+            width: 185px
+            height: 185px
+            & .activation-steps__decor-border
+                width: 130px
+                height: 225px
+                right: -34px
+
+        & .activation-steps__decor-border
+            & path
+                stroke-dasharray: 3000
+                stroke-dashoffset: 3000
+
+        &.animation
+            & .activation-steps__decor-border
+                & path
+                    animation: drawing 2.8s linear forwards
+                    will-change: stroke-dashoffset
+    @media (max-width: 470px)
+        display: flex
+        align-items: center
+        text-align: center
+        justify-content: center
+        flex-direction: column
+    &.animation
+        & .activation-steps__list .activation-step
+            animation: fly-from-left 1.5s forwards
+            &:nth-of-type(1)
+                animation-delay: 1.3s
+            &:nth-of-type(2)
+                animation-delay: 2s
+            &:nth-of-type(3)
+                animation-delay: 3s
+            &:nth-of-type(4)
+                animation-delay: 4s
+            &:nth-of-type(5)
+                animation-delay: 5s
+            @media (max-width: 470px)
+                & .activation-step
+                    animation: fly-from-left 0.75s forwards
+                &:nth-of-type(1)
+                    animation-delay: 0s
+                &:nth-of-type(2)
+                    animation-delay: 0.5s
+                &:nth-of-type(3)
+                    animation-delay: 1s
+                &:nth-of-type(4)
+                    animation-delay: 1.5s
+                &:nth-of-type(5)
+                    animation-delay: 2s
+
+.activation-steps__decor-border
+    @media (max-width: 470px)
+        display: none
 
 .activation-steps__text
     font-family: 'Kharkiv Tone'
@@ -108,6 +166,9 @@
     text-align: center
     color: #FFFFFF
     max-width: 72%
+    z-index: 1
+    @media (min-width: 1900px)
+        font-size: 21px
     @media (max-width: 1175px)
         font-size: 1.25vw
     @media (max-width: 790px)
@@ -116,18 +177,34 @@
         font-size: 1vw
     @media (max-width: 570px)
         font-size: 1.1vw
+    @media (max-width: 470px)
+        font-size: 4.6vw
+        line-height: 139%
+        text-align: center
+        max-width: none
+        order: 0
+        margin-bottom: 37px
     &--litle
-        font-family: 'Poppins'
+        z-index: 1
+        font-family: 'Poppins' !important
         font-style: normal
         font-weight: 400
         font-size: 1.1vw
         line-height: 110%
         opacity: 0.6
         max-width: 72%
+        @media (min-width: 1900px)
+            font-size: 23px
         @media (max-width: 1175px)
             font-size: 1.35vw
         @media (max-width: 790px)
             font-size: 1.2vw
+        @media (max-width: 470px)
+            font-size: 3.7vw
+            line-height: 154%
+            text-align: center
+            max-width: none
+            order: 2
 
 .activation-steps__title
     font-family: 'Kharkiv Tone'
@@ -136,6 +213,10 @@
     font-size: 3vw
     line-height: 114%
     max-width: 72%
+    z-index: 1
+
+    @media (min-width: 1900px)
+        font-size: 50px
     @media (max-width: 1175px)
         font-size: 3.3vw
     @media (max-width: 790px)
@@ -144,6 +225,12 @@
         font-size: 3vw
     @media (max-width: 570px)
         font-size: 3.1vw
+    @media (max-width: 470px)
+        font-size: 10vw
+        text-align: center
+        max-width: none
+        order: -1
+        margin-bottom: 25px
 
 .activation-steps__blue
     font-family: 'Poppins'
@@ -153,31 +240,47 @@
     line-height: 137%
 
     color: #00E0FF
+    @media (max-width: 470px)
+        font-size: 4vw
 
 .activation-steps__list
-    position: absolute
-    display: flex
-    flex-direction: column
-    gap: 34px
-    right: -600px
-    @media (max-width: 1370px)
-        right: -520px
-    @media (max-width: 1175px)
-        right: -470px
-        gap: 28px
-    @media (max-width: 1070px)
-        right: -435px
-    @media (max-width: 880px)
-        right: -380px
-    @media (max-width: 790px)
-        gap: 22px
-        right: -315px
-    @media (max-width: 675px)
-        gap: 17px
-        right: -280px
-    @media (max-width: 570px)
-        gap: 17px
-        right: -240px
+    @media (min-width: 470px)
+        position: absolute
+        display: flex
+        flex-direction: column
+        gap: 34px
+        right: -600px
+        top: -12vw
+        @media (max-width: 1370px)
+            right: -520px
+        @media (max-width: 1175px)
+            right: -470px
+            gap: 28px
+            top: -8vw
+        @media (max-width: 1070px)
+            right: -435px
+        @media (max-width: 880px)
+            right: -380px
+        @media (max-width: 790px)
+            gap: 22px
+            right: -315px
+        @media (max-width: 675px)
+            gap: 17px
+            right: -280px
+        @media (max-width: 570px)
+            gap: 17px
+            right: -240px
+    @media (min-width: 1471px)
+        top: -8vw
+    @media (min-width: 1900px)
+        right: -760px
+    @media (max-width: 470px)
+        display: flex
+        flex-direction: column
+        gap: 20px
+        order: 1
+        width: 100%
+        margin-bottom: 53px
 
 .activation-step
     background: linear-gradient(90deg, rgba(0, 0, 0, 0) -6.3%, rgba(0, 127, 146, 0.15) 105.22%), rgba(9, 9, 9, 0.05)
@@ -189,33 +292,37 @@
     display: flex
     gap: 35px
     align-items: center
+    opacity: 0
     &:last-of-type
         background: linear-gradient(90deg, rgba(0, 0, 0, 0) -51.24%, rgba(63, 166, 0, 0.2) 100%), rgba(9, 9, 9, 0.4)
         backdrop-filter: blur(25px)
         border-radius: 100px 0px 0px 100px
         color: #9CC200
-    &:nth-of-type(2n)
-        margin-left: 80px
-        @media (max-width: 880px)
-            margin-left: 64px
-        @media (max-width: 790px)
-            margin-left: 54px
-        @media (max-width: 675px)
-            margin-left: 43px
-        @media (max-width: 570px)
-            margin-left: 36px
 
-    &:nth-of-type(3)
-        margin-left: 137px
-        @media (max-width: 880px)
-            margin-left: 109px
-        @media (max-width: 790px)
-            margin-left: 92px
-        @media (max-width: 675px)
-            margin-left: 73px
-        @media (max-width: 570px)
-            margin-left: 62px
+    @media (min-width: 470px)
+        &:nth-of-type(2n)
+            margin-left: 80px
+            @media (max-width: 880px)
+                margin-left: 64px
+            @media (max-width: 790px)
+                margin-left: 54px
+            @media (max-width: 675px)
+                margin-left: 43px
+            @media (max-width: 570px)
+                margin-left: 36px
 
+        &:nth-of-type(3)
+            margin-left: 137px
+            @media (max-width: 880px)
+                margin-left: 109px
+            @media (max-width: 790px)
+                margin-left: 92px
+            @media (max-width: 675px)
+                margin-left: 73px
+            @media (max-width: 570px)
+                margin-left: 62px
+    @media (min-width: 1900px)
+        width: 590px
     @media (max-width: 1370px)
         width: 400px
     @media (max-width: 1175px)
@@ -242,6 +349,11 @@
         gap: 15px
         padding: 10px 0
         padding-left: 15px
+    @media (max-width: 470px)
+        width: 100%
+        gap: 26px
+        padding: 36px 0
+        padding-left: 36px
 
 .activation-step__text
     max-width: 66.7%
@@ -251,6 +363,8 @@
     font-size: 1vw
     line-height: 158%
     text-align: left
+    @media (min-width: 1900px)
+        max-width: 80.7%
     @media (max-width: 1070px)
         max-width: 76.7%
     @media (max-width: 880px)
@@ -259,6 +373,9 @@
         max-width: 80.7%
     @media (max-width: 675px)
         max-width: 77%
+    @media (max-width: 470px)
+        max-width: 65%
+        font-size: 4vw
 
 .activation-step__number
     @media (max-width: 1175px)
@@ -269,3 +386,27 @@
         height: 30px
     @media (max-width: 675px)
         height: 20px
+    @media (max-width: 470px)
+        height: 48px
+        width: 48px
+
+// Animation
+@keyframes opacity-scale
+    from
+        opacity: 0
+        scale: 0
+    100%
+        opacity: 1
+        scale: 1
+
+@keyframes drawing
+    to
+        stroke-dashoffset: 0
+
+@keyframes fly-from-left
+    from
+        opacity: 0
+        transform: translateX(80px)
+    to
+        opacity: 1
+        transform: translateX(0px)
