--- a/app/sass/text-page.sass
+++ b/app/sass/text-page.sass
@@ -3,7 +3,6 @@
 
 .text-page
     background: #090909
-    padding: 0 7vw
     z-index: 1
     position: relative
     padding-top: 240px
@@ -14,17 +13,31 @@
         background: linear-gradient(180deg, rgba(0, 87, 168, 0.4) 0%, rgba(0, 0, 0, 0) 100%), #090909 url(../img/text-page-header-bg.png) no-repeat top center
         background-size: cover
         z-index: -1
+    @media(max-width: 1200px)
+        padding-top: 210px
+    @media(max-width: 1000px)
+        padding-top: 180px
+        &::before
+            height: 35vh
+    @media(max-width: 815px)
+        padding-top: 145px
+    @media(max-width: 590px)
+        padding-top: 100px
 
 .text-page__container
     margin: 0 auto
     width: 71vw
+    @media(max-width: 1200px)
+        width: 80vw
+    @media(max-width: 1000px)
+        width: 90vw
 
 .text-page__text
     font-family: 'Poppins'
     font-style: normal
     font-weight: 400
-    font-size: 20px
-    line-height: 35px
+    font-size: 1.3vw
+    line-height: 175%
     position: relative
 
     color: #FFFFFF
@@ -36,12 +49,23 @@
         font-family: 'Kharkiv Tone'
         font-style: normal
         font-weight: 400
-        font-size: 18px
+        font-size: 0.95vw
         line-height: 167%
         color: #FFFFFF
         opacity: 1
     &--1
-        margin-bottom: 122px
+        margin-bottom: 6.4vw
+    @media(max-width: 1000px)
+        &--1
+            margin-bottom: 9.2vw
+    @media(max-width: 815px)
+        font-size: 1.5vw
+        &--side
+            font-size: 1.1vw
+    @media(max-width: 500px)
+        font-size: 1.95vw
+        &--side
+            font-size: 1.7vw
 
 .text-page__title
     font-family: 'Kharkiv Tone'
@@ -49,55 +73,90 @@
     font-weight: 400
     color: #FFFFFF
     &--h1
-        font-size: 60px
+        font-size: 3.2vw
         line-height: 133%
-        margin-bottom: 20px
+        margin-bottom: 1.4vw
     &--h2
-        font-size: 45px
+        font-size: 2.2vw
         line-height: 122%
-        margin-bottom: 25px
+        margin-bottom: 1.7vw
     &--h3
-        font-size: 30px
+        font-size: 1.6vw
         line-height: 117%
-        margin-bottom: 40px
+        margin-bottom: 2vw
     &--h4
-        font-size: 30px
+        font-size: 1.6vw
         line-height: 117%
         color: #00E0FF
-        margin-bottom: 45px
+        margin-bottom: 2.3vw
+    @media(max-width: 815px)
+        &--h1
+            font-size: 3.7vw
+            margin-bottom: 2.3vw
+        &--h2
+            font-size: 2.5vw
+            margin-bottom: 2.7vw
+        &--h3
+            font-size: 1.8vw
+            margin-bottom: 3vw
+        &--h4
+            font-size: 1.8vw
+            margin-bottom: 3.4vw
+    @media(max-width: 500px)
+        &--h1
+            font-size: 4.8vw
+        &--h2
+            font-size: 3.25vw
+        &--h3
+            font-size: 2.35vw
+        &--h4
+            font-size: 2.35vw
 
 .side-article__title
     font-family: 'Neue Machina'
     font-style: normal
     font-weight: 700
-    font-size: 20px
+    font-size: 1vw
     line-height: 150%
 
     text-transform: uppercase
 
     color: #FFFFFF
-    margin-bottom: 25px
+    margin-bottom: 1.3vw
+    @media(max-width: 1000px)
+        margin-bottom: 2vw
+    @media(max-width: 815px)
+        font-size: 1.15vw
+    @media(max-width: 500px)
+        font-size: 1.5vw
 
 .page-way
     display: flex
     gap: 60px
-    margin-bottom: 63px
+    margin-bottom: 3.2vw
+    @media(max-width: 1000px)
+        margin-bottom: 4.6vw
 
 .page-way__text
     font-family: 'Kharkiv Tone'
     font-style: normal
     font-weight: 400
-    font-size: 20px
+    font-size: 1vw
     line-height: 175%
 
     color: #FFFFFF
     position: relative
+    @media(max-width: 815px)
+        font-size: 1.15vw
+    @media(max-width: 500px)
+        font-size: 1.5vw
     &::before
         @include defaul-pseudo-element(6px, 5px)
         background: url('../img/arrow_navigation.svg') no-repeat center center
-        background-size: cover
+        background-size: contain
         @include centering-height-absolute-element()
         right: -26px
+
     &--active
         opacity: 0.5
         &::before
@@ -112,43 +171,56 @@
         display: grid
         grid-template-columns: 1fr 1fr
         gap: 7%
-        margin-bottom: 110px
+        margin-bottom: 5.7vw
     &--1-2
         display: grid
         grid-template-columns: 1fr 2fr
         gap: 7.15%
-        margin-bottom: 90px
+        margin-bottom: 4.7vw
     &--3
         display: grid
         grid-template-columns: 1fr 1fr 1fr
         gap: 7.15%
-        margin-bottom: 90px
+        margin-bottom: 4.7vw
     &--lists
         display: grid
         grid-template: 1fr 1fr 1fr
-        gap: 5.9%
-        margin-bottom: 120px
+        gap: 4.9%
+        margin-bottom: 6.25vw
         grid-template-areas: 'row-title row-title side-article' 'list-number list-unnumber side-article'
     & .text-page__img
         width: 100%
         height: auto
+    @media(max-width: 1200px)
+        &--2
+            margin-bottom: 8.2vw
+        &--1-2
+            margin-bottom: 6.8vw
+        &--3
+            margin-bottom: 6.8vw
+        &--lists
+            margin-bottom: 9vw
 
 .text-page__row-title
     font-family: 'Kharkiv Tone'
     font-style: normal
     font-weight: 400
-    font-size: 30px
+    font-size: 1.6vw
     line-height: 117%
 
     color: #00E0FF
-    margin-bottom: 45px
+    margin-bottom: 2.3vw
     grid-area: row-title
+    @media(max-width: 815px)
+        font-size: 1.8vw
+    @media(max-width: 500px)
+        font-size: 2.35vw
 
 .text-page__list
     display: flex
     flex-direction: column
-    gap: 20px
-    padding-left: 34px
+    gap: 1vw
+    padding-left: 1.8vw
 
 .text-page__number-list
     margin: 0
@@ -161,24 +233,29 @@
         &::before
             content: counter(number-list-counter)
             position: absolute
-            left: -34px
-            @include centering-height-absolute-element()
+            left: -1.8vw
+            top: 0
             font-family: 'Kharkiv Tone'
             font-style: normal
             font-weight: 400
-            font-size: 20px
+            font-size: 1vw
             color: #00E0FF
+            @media(max-width: 815px)
+                font-size: 1.45vw
+            @media(max-width: 500px)
+                font-size: 1.9vw
+
 .text-page__unnumber-list
     width: 100%
     grid-area: list-unnumber
     & .text-page__list-item
         position: relative
         &::before
-            @include defaul-pseudo-element(12px)
-            left: -27px
+            @include defaul-pseudo-element(0.625vw)
+            left: -1.4vw
             background: #00E0FF
             border-radius: 50%
-            @include centering-height-absolute-element()
+            top: 20%
 .side-article
     grid-area: side-article
 
@@ -186,8 +263,12 @@
     font-family: 'Poppins'
     font-style: normal
     font-weight: 400
-    font-size: 16px
+    font-size: 0.95vw
     line-height: 150%
     color: #FFFFFF
 
     opacity: 0.7
+    @media(max-width: 815px)
+        font-size: 1.1vw
+    @media(max-width: 500px)
+        font-size: 1.45vw
